[tool.poetry]
name = "example-bot"
version = "0.1.0"
description = ""
authors = ["KostyaDmitriev <dmiter.kostya@yandex.ru>"]
readme = "README.md"
packages = [{include = "example_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
